--- a/output.css
+++ b/output.css
@@ -663,6 +663,14 @@ video {
   top: 24rem;
 }
 
+.bottom-10{
+  bottom: 2.5rem;
+}
+
+.right-5{
+  right: 1.25rem;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -681,6 +689,10 @@ video {
 
 .z-\[1000\]{
   z-index: 1000;
+}
+
+.z-\[100\]{
+  z-index: 100;
 }
 
 .-m-1{
@@ -713,9 +725,9 @@ video {
   margin-bottom: -1.5rem;
 }
 
-.mx-3{
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .mx-auto{
@@ -726,11 +738,6 @@ video {
 .my-5{
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 
 .-mb-14{
@@ -797,6 +804,10 @@ video {
   margin-top: 2rem;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .block{
   display: block;
 }
@@ -861,6 +872,18 @@ video {
   height: 100%;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-16{
+  height: 4rem;
+}
+
 .w-3\/4{
   width: 75%;
 }
@@ -893,6 +916,18 @@ video {
   width: 100%;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
 .min-w-\[68px\]{
   min-width: 68px;
 }
@@ -907,10 +942,6 @@ video {
 
 .max-w-xl{
   max-width: 36rem;
-}
-
-.max-w-screen-sm{
-  max-width: 640px;
 }
 
 .flex-1{
@@ -1429,6 +1460,11 @@ video {
   letter-spacing: -0.025em;
 }
 
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-200{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -1472,11 +1508,6 @@ video {
 .text-neutral-900{
   --tw-text-opacity: 1;
   color: rgb(23 23 23 / var(--tw-text-opacity));
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-red-700{
@@ -1663,11 +1694,6 @@ video {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-rose-300:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 164 175 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-white:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1712,14 +1738,14 @@ video {
     top: 48rem;
   }
 
-  .sm\:my-2{
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-
   .sm\:mx-auto{
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .sm\:my-2{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 
   .sm\:mt-2{
@@ -2088,6 +2114,12 @@ html {
   z-index: 10;
 }
 
+@media (min-width: 768px){
+  .arrows{
+    top: 44%;
+  }
+}
+
 .arrows button{
   height: 2.5rem;
   width: 2.5rem;
@@ -2151,12 +2183,16 @@ html {
   border-bottom-left-radius: 1.5rem;
   border-top-right-radius: 1.5rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
   padding: 1rem;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
+/* #services .book-btn {
+  @apply 
+} */
 
 .card-title {
   transition-property: color background-color,border-color,text-decoration-color,fill,stroke;
